Maybe fix whitespace at bottom of short body

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,8 +73,13 @@ html {
 }
 
 body {
-  min-height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   font-family: "Roboto", helvetica, sans-serif;
+  main {
+    flex: 1;
+  }
 }
 
 // Don't cover element with header when auto scrolling
